# rs_practice

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  main.go
01_helloworld/: Cargo.toml
02_variables/src/: main.rs
03_datatypes/src/: main.rs
04_function/: Cargo.toml
04_function/src/: main.rs
05_control_flow/: Cargo.toml
05_control_flow/src/: main.rs
06_ownership/: Cargo.toml
06_ownership/src/: main  main.rs
07_reference_borrow/: Cargo.toml
07_reference_borrow/src/: main.rs
08_structs/src/: main.rs
09_method_syntax/: Cargo.toml
09_method_syntax/src/: main.rs
10_enums/src/: main.rs
11_opiton/: Cargo.toml
11_opiton/src/: main.rs
12_match/: Cargo.toml
12_match/src/: main.rs
13_package/: Cargo.toml
13_package/restaurant/: Cargo.toml
13_package/src/: main.rs
14_collections/: Cargo.toml
14_collections/src/: main.rs
15_error/: Cargo.toml
16_typeinto/: Cargo.toml
16_typeinto/src/: main.rs
20_lifecycle/src/: main.rs
22_my_macro/: Cargo.toml
22_my_macro/src/: main.rs
a01_helloworld/: Cargo.toml
a01_helloworld/src/: main  main.rs
a02_variables/: Cargo.toml
a02_variables/src/: main.rs
a03_datatypes/: Cargo.toml
a03_datatypes/src/: main.rs
a04_function/: Cargo.toml
a04_function/src/: main.rs
a05_control_flow/: Cargo.toml
a05_control_flow/src/: main.rs
a06_ownership/: Cargo.toml
a06_ownership/src/: main.rs
a07_reference_borrow/: Cargo.toml
a07_reference_borrow/src/: main.rs
a08_structs/: Cargo.toml
a09_method_syntax/: Cargo.toml
a09_method_syntax/src/: main.rs
a10_enums/: Cargo.toml
a11_opiton/: Cargo.toml
a12_match/: Cargo.toml
a13_package/: Cargo.toml
a13_package/restaurant/: Cargo.toml
a13_package/src/: main.rs
a14_collections/: Cargo.toml
a15_error/: Cargo.toml
a16_typeinto/: Cargo.toml
a17_minigrep/: Cargo.toml
a17_minigrep/src/: main
a20_lifecycle/: Cargo.toml
a20_lifecycle/src/: main.rs
a21_closure/: Cargo.toml
a22_my_macro/: Cargo.toml
a23_format_output/: Cargo.toml
a23_format_output/src/: main  main.rs
a39_async_await/: Cargo.toml
a40_commandline/: Cargo.toml
a40_commandline/src/: main.rs
a41_owner_borrow/: Cargo.toml
a41_owner_borrow/src/: main.rs
a50_serde/: Cargo.toml
a50_serde/src/: main.rs
a51_axum/: Cargo.toml
a51_axum/src/: main.rs
a52_chrono/: Cargo.toml
a53_log4/: Cargo.toml
algorithms/src/: lib.rs  queue.rs  stack.rs
at_ex/: Cargo.toml
at_ex/src/: main.rs
ax01_helloworld/src/: main.rs
ax05_control_flow/: Cargo.toml
ax05_control_flow/src/: main.rs
ax07_reference_borrow/src/: main.rs
ax10_enums/src/: main.rs
ax11_opiton/: Cargo.toml
ax15_error/: Cargo.toml
ax16_typeinto/src/: lib.rs
ax17_minigrep/src/: main.rs
ax20_lifecycle/: Cargo.toml
ax21_closure/: Cargo.toml
ax21_closure/src/: main.rs
ax22_my_macro/: Cargo.toml
ax23_format_output/: Cargo.toml
ax41_owner_borrow/: Cargo.toml
ax50_serde/: Cargo.toml
ax51_axum/: Cargo.toml
ax53_log4/: Cargo.toml
chrono_ex/: Cargo.toml
compression_ex/examples/: flate_decompression.rs  tar_flate_compression.rs  tar_flate_decompression.rs  tar_reader.rs
config_ex/: settings.toml
course/ax01_helloworld/: Cargo.toml
course/ax02_variables/: Cargo.toml
course/ax03_datatypes/: Cargo.toml
course/ax04_function/: Cargo.toml
course/ax06_ownership/: Cargo.toml
course/ax07_reference_borrow/: Cargo.toml
course/ax08_structs/: Cargo.toml
course/ax09_method_syntax/: Cargo.toml
course/ax10_enums/: Cargo.toml
course/ax12_match/: Cargo.toml
course/ax13_package/: Cargo.toml
course/ax14_collections/: Cargo.toml
course/ax16_typeinto/: Cargo.toml
course/ax17_minigrep/: Cargo.toml
course/ax39_async_await/: Cargo.toml
course/ax40_commandline/: Cargo.toml
course/ax52_chrono/: Cargo.toml
cryptography_ex/: Cargo.toml
cryptography_ex/examples/: hmac.rs  md5.rs  sha256.rs
datatypes/: Cargo.toml
datatypes/src/: main.rs
default_ex/: Cargo.toml
default_ex/src/: lib.rs
derive_more_ex/: Cargo.toml
dialoguer_ex/: Cargo.toml
dotenv_ex/: .env
dotenv_ex/src/: main.rs
enums/: Cargo.toml
env_ex/: Cargo.toml
env_ex/src/: lib.rs
error_ex/: Cargo.toml
error_ex/src/: main.rs
exercises/exc00/: Cargo.toml
exercises/exc01_clap/: Cargo.toml
exercises/exc01_clap/src/: cli.rs  main.rs
exercises/exc01_clap/src/command/: md5sum.rs  mod.rs  sha256.rs
exercises/exc02_tokio/: Cargo.toml
exercises/exc03_ratatui/: Cargo.toml
exercises/exc03_ratatui_counter/: Cargo.toml
exercises/exc04_ratatui_json/: Cargo.toml
exercises/exc05_ratatui_async_counter/: Cargo.toml
exercises/exc05_ratatui_async_counter/src/: app.rs  app_update.rs  event.rs  main.rs  tui.rs  tui_event.rs  ui.rs  update.rs
exercises/exc06_bzlib-sys/: Cargo.toml  build.rs
ffi_ex/: Cargo.toml
function/src/: main.rs
helloworld/src/: main.rs
http_ex/src/: lib.rs
iter_ex/: Cargo.toml
libraries/clap_ex/: Cargo.toml
libraries/compression_ex/: Cargo.toml
libraries/config_ex/: Cargo.toml
libraries/crossbeam_ex/: Cargo.toml
libraries/dotenv_ex/: Cargo.toml
libraries/error_anyhow_ex/: Cargo.toml
libraries/hash_ex/: Cargo.toml
libraries/http_ex/: Cargo.toml
libraries/indicatif_ex/: Cargo.toml
libraries/lib01_chrono/: Cargo.toml
libraries/lib02_clap/: Cargo.toml
libraries/lib03_compression/: Cargo.toml
libraries/lib04_config/: Cargo.toml
libraries/lib05_crossbeam/: Cargo.toml
libraries/lib06_derive_more/: Cargo.toml
libraries/lib07_dialoguer/: Cargo.toml
libraries/lib08_dotenv/: Cargo.toml
libraries/lib09_error_anyhow/: Cargo.toml
libraries/lib10_hash/: Cargo.toml
libraries/lib11_http/: Cargo.toml
libraries/zip_ex/: Cargo.toml
mem_ex/: Cargo.toml
option_ex/: Cargo.toml
package/: Cargo.toml
path_ex/: Cargo.toml
polars_ex/: Cargo.toml
profile/: profile.go
prost_ex/: build.rs
rand_ex/: Cargo.toml
result_ex/: Cargo.toml
semver_ex/: Cargo.toml
structs/: Cargo.toml
strum_ex/: Cargo.toml
tera_ex/: Cargo.toml
time_ex/: Cargo.toml
typed_builder_ex/: Cargo.toml
url_ex/: Cargo.toml
variables/: Cargo.toml
(+89 files in other folders)
