[workspace]
resolver = "2"
members = [
    "ax01_helloworld",
    "ax02_variables",
    "ax03_datatypes",
    "ax04_function",
    "ax05_control_flow",
    "ax06_ownership",
    "ax07_reference_borrow",
    "ax08_structs",
    "ax09_method_syntax",
    "ax10_enums",
    "ax11_opiton",
    "ax12_match",
    "ax13_package",
    "ax14_collections",
    "ax15_error",
    "ax16_typeinto",
    "ax17_minigrep",
    "ax20_lifecycle",
    "ax21_closure",
    "ax22_my_macro",
    "ax23_format_output",
    "ax39_async_await",
    "ax40_commandline",
    "ax41_owner_borrow",
    "ax50_serde",
    "ax51_axum",
    "ax52_chrono",
    "ax53_log4",
    'algorithms',
    'chrono_ex',
    'clap_ex',
    'compression_ex',
    'config_ex',
    'crossbeam_ex',
    'cryptography_ex',
    'default_ex',
    'derive_more_ex',
    'dialoguer_ex',
    'dotenv_ex',
    'env_ex',
    'error_anyhow_ex',
    'error_ex',
    'ffi_ex',
    'hash_ex',
    'http_ex',
    'indicatif_ex',
    'iter_ex',
    'option_ex',
    'path_ex',
    'polars_ex',
    'prost_ex',
    'rand_ex',
    'result_ex',
    'semver_ex',
    'serde_ex',
    'logging_ex',
    'mem_ex',
    'once_cell_ex',
    'strum_ex',
    'tera_ex',
    'time_ex',
    'typed_builder_ex',
    'url_ex',
    'uuid_ex',
    'zip_ex'
]
