[workspace]
resolver = "2"
members = [
    "course/ax01_helloworld",
    "course/ax02_variables",
    "course/ax03_datatypes",
    "course/ax04_function",
    "course/ax05_control_flow",
    "course/ax06_ownership",
    "course/ax07_reference_borrow",
    "course/ax08_structs",
    "course/ax09_method_syntax",
    "course/ax10_enums",
    "course/ax11_opiton",
    "course/ax12_match",
    "course/ax13_package",
    "course/ax14_collections",
    "course/ax15_error",
    "course/ax16_typeinto",
    "course/ax17_minigrep",
    "course/ax20_lifecycle",
    "course/ax21_closure",
    "course/ax22_my_macro",
    "course/ax23_format_output",
    "course/ax39_async_await",
    "course/ax40_commandline",
    "course/ax41_owner_borrow",
    "course/ax50_serde",
    "course/ax51_axum",
    "course/ax52_chrono",
    "course/ax53_log4",
    "standard/st01_default",
    "standard/st02_error",
    "standard/st03_ffi",
    "standard/st04_iter",
    "standard/st05_mem",
    "standard/st06_option",
    "standard/st07_path",
    "standard/st08_result",
    "standard/st09_time",

    "algorithms",
    "libraries/lib01_chrono",
    "libraries/clap_ex",
    "libraries/compression_ex",
    "libraries/config_ex",
    "libraries/crossbeam_ex",
    "libraries/cryptography_ex",
    "libraries/derive_more_ex",
    "libraries/dialoguer_ex",
    "libraries/dotenv_ex",
    "libraries/env_ex",
    "libraries/error_anyhow_ex",
    "libraries/hash_ex",
    "libraries/http_ex",
    "libraries/indicatif_ex",
    "libraries/polars_ex",
    "libraries/prost_ex",
    "libraries/rand_ex",
    "libraries/semver_ex",
    "libraries/serde_ex",
    "libraries/logging_ex",
    "libraries/once_cell_ex",
    "libraries/strum_ex",
    "libraries/tera_ex",
    "libraries/typed_builder_ex",
    "libraries/url_ex",
    "libraries/uuid_ex",
    "libraries/zip_ex"
]
