[workspace]
resolver = "2"
members = [
    "course/ax01_helloworld",
    "course/ax02_variables",
    "course/ax03_datatypes",
    "course/ax04_function",
    "course/ax05_control_flow",
    "course/ax06_ownership",
    "course/ax07_reference_borrow",
    "course/ax08_structs",
    "course/ax09_method_syntax",
    "course/ax10_enums",
    "course/ax11_opiton",
    "course/ax12_match",
    "course/ax13_package",
    "course/ax14_collections",
    "course/ax15_error",
    "course/ax16_typeinto",
    "course/ax17_minigrep",
    "course/ax20_lifecycle",
    "course/ax21_closure",
    "course/ax22_my_macro",
    "course/ax23_format_output",
    "course/ax39_async_await",
    "course/ax40_commandline",
    "course/ax41_owner_borrow",

    "standard/st01_default", # default trait
    "standard/st02_error",   # thiserror crate
    "standard/st03_ffi",     # ffi
    "standard/st04_iter",    # iter
    "standard/st05_mem",     # mem
    "standard/st06_option",  # option
    "standard/st07_path",    # path
    "standard/st08_result",  # result
    "standard/st09_time",    # time
    "standard/st10_env",

    "exercises/exc00",
    "exercises/exc01_clap",
    "exercises/exc02_tokio",
    "exercises/exc03_ratatui_counter",
    "exercises/exc04_ratatui_json",
    "exercises/exc05_ratatui_async_counter", 
    "exercises/exc06_bzlib-sys",

    "libraries/lib01_chrono",
    "libraries/lib02_clap",
    "libraries/lib03_compression",
    "libraries/lib04_config",
    "libraries/lib05_crossbeam",
    "libraries/lib06_derive_more",
    "libraries/lib07_dialoguer",
    "libraries/lib08_dotenv",
    "libraries/lib09_error_anyhow",
    "libraries/lib10_hash",
    "libraries/lib11_http",
    "libraries/lib12_indicatif",
    "libraries/lib13_logging",
    "libraries/lib14_once_cell",
    "libraries/lib15_polars",
    "libraries/lib16_prost",
    "libraries/lib17_rand",
    "libraries/lib18_semver",
    "libraries/lib19_serde",
    "libraries/lib20_strum",
    "libraries/lib21_tera",
    "libraries/lib22_typed_builder",
    "libraries/lib23_url",
    "libraries/lib24_uuid",
    "libraries/lib25_zip",
    "libraries/lib26_cryptography",
    "libraries/lib27_log4",

    "algorithms",
]
