[package]
name = "exc01"
version = "0.1.0"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
md5 = "0.7"
hex = "0.4"
derive_more = "0.99"
ring = "0.16"
