[package]
name = 'config_ex'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = '0.13'
lazy_static = "1.4"

[[bin]]
name = 'simple'
test = false
path = 'bin/simple.rs'


[[bin]]
name = 'global'
test = false
path = 'bin/global.rs'
